# coreason-meta-engineering

./: .clinerules  .cursorrules  .dockerignore  .gitattributes  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  comments.json  coverage.txt  llms.txt  pyproject.toml  read_comments.py  release-please-config.json  zensical.toml
.agents/skills/coreason-forge-scaffolding/: SKILL.md
.github/workflows/: advanced-security.yml  bandit.yml  ci.yml  codeql.yml  container-scan.yml  gitleaks.yml  osv-scanner.yml  publish.yml  release-please.yml  scorecard.yml  security.yml  trivy.yml  trufflehog.yml  zap-dast.yml
docs/: agents.md  api.md  architecture.md  development.md  fabrication_lines.md  index.md  mcp.md  security_and_zero_trust.md
docs/api/: ast_functors.md  cli.md  mcp_server.md
scripts/: enforce_headers.py
src/coreason_meta_engineering/: __init__.py  forge_orchestrator.py  main.py  mcp_server.py  pvv.py  schema.py
src/coreason_meta_engineering/ast/: actuator_scaffold.py  agent_scaffold.py  kubernetes_crd_scaffold.py  node_scaffold.py  scaffold.py  state_reconciliation.py  state_scaffold.py  tool_scaffold.py  urn_packager.py
src/coreason_meta_engineering/utils/: __init__.py  ast_extraction.py  cla_gate.py  congruence_judge.py  hasher.py  kinetic_guillotine.py  logger.py  mcp_registry_scaffolder.py  topological_validation.py  validation.py
tests/: __init__.py  test_cla_gate.py  test_forge_coverage.py  test_main.py  test_mcp_server.py  test_publish_command.py  test_pvv.py  test_schema.py  test_utils.py
tests/ast/: test_actuator_scaffold.py  test_actuator_scaffold_coverage.py  test_agent_scaffold.py  test_kubernetes_crd_scaffold.py  test_node_scaffold.py  test_node_scaffold_headers.py  test_scaffold.py  test_state_reconciliation.py  test_state_scaffold.py  test_tool_scaffold.py
tests/utils/: test_ast_extraction.py  test_congruence_judge.py  test_kinetic_guillotine_scan.py  test_mcp_registry_scaffolder.py  test_topological_validation_semantic.py  test_validate_topology.py
wasm/: spin.toml
wasm/components/forge/src/: app.py  forge_service.py
wasm/wit/: mcp.wit  world.wit
wheels/: coreason_urn_authority-0.2.3.dev10+gcb5905f9c-py3-none-any.whl
