[build-system]
requires = [
    "hatchling",
    "hatch-vcs"
]
build-backend = "hatchling.build"

[project]
name = "coreason_meta_engineering"
dynamic = ["version"]
description = "The Agentic Forge & AST Manipulation Layer"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
dependencies = [
    "coreason-urn-authority",
    "libcst>=1.8.6",
    "loguru>=0.7.2",
    "mcp>=1.3.0",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "ruamel.yaml>=0.18.6",
    "sentence-transformers>=5.4.1",
    "typer>=0.15.2",
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "zensical",
    "mypy>=1.19.1",
    "pytest-asyncio",
    "pytest-benchmark",
    "deptry",
    "deepdiff",
    "hypothesis",
    "syrupy",
    "mkdocstrings-python",
    "types-pyyaml>=6.0.12.20250915",
    "tzdata>=2025.3",
    "pytest-xdist>=3.6.1"
]

[project.scripts]
coreason-meta-mcp = "coreason_meta_engineering.mcp_server:main"

[tool.deptry]
ignore = ["DEP002"]

[tool.deptry.per_rule_ignores]
DEP003 = ["coreason_manifest"]

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_meta_engineering"]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason-meta-engineering"
Repository = "https://github.com/CoReason-AI/coreason-meta-engineering"
Documentation = "https://github.com/CoReason-AI/coreason-meta-engineering"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "RUF", "ARG", "C4", "PT", "TCH", "FA", "PIE", "RET", "PERF", "FURB", "LOG", "N", "A", "S"]
ignore = ["S101", "TC001", "TC002", "TC003", "UP037"]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]
disable_error_code = ["unused-ignore"]

[[tool.mypy.overrides]]
module = ["coreason_urn_authority.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-n auto --cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=100"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]

[tool.hatch.version]
source = "vcs"

[tool.uv]
prerelease = "allow"
